--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Readme Pattern",
   "description": "A VSCode extension that generates README.md files",
   "version": "1.0.0",
-  "publisher": "Thomas Chang",
+  "publisher": "thomascsd",
   "author": "Thomas Chang",
   "license": "MIT",
   "engines": {
@@ -41,7 +41,9 @@
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "build": "vsce package",
+    "deploy": "vsce publish"
   },
   "devDependencies": {
     "typescript": "^3.5.2",
