--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "explorer/context": [
         {
           "command": "extension.readmeOnExplorer",
-          "when": "true"
+          "when": "explorerResourceIsFolder"
         }
       ]
     }
